--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,13 +17,13 @@
         <li class="navigation-list__item"><a href="" class="navigation-list__link">Contacts</a></li>
       </ul>
     </nav>
-    <button class="header-btn" data-modal-open>Contact us</button>
+    <button type="button" class="header-btn" data-modal-open>Contact us</button>
     <svg class="header__icon" width="18" height="16">
       <use href="./icons/symbol-defs.svg#icon-mobile-menu"></use>
     </svg>
-    <div class="backdrop is--hidden no--scroll" data-backdrop>
+    <div class="backdrop is-hidden no--scroll" data-backdrop>
       <div class="modal">
-        <button type="button" class="modal--close" data-modal-close>
+        <button type="button" class="modal-close" data-modal-close>
           <svg class="modal--close__icon" width="11" height="11">
             <use href="./icons/symbol-defs.svg#icon-close-btn"></use>
           </svg>
