--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -98,10 +98,9 @@ header {
 
 .backdrop {
   position: fixed;
-  left: 50%;
-  top: 50%;
-  z-index: 10;
-  transform: translate(-50%, -50%);
+  left: 0;
+  top: 0;
+  // z-index: 10;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -109,14 +108,14 @@ header {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is--hidden {
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
 
-.no--scroll {
-  overflow: hidden;
-}
+// .no--scroll {
+//   overflow: hidden;
+// }
 
 .modal {
   position: absolute;
@@ -128,23 +127,18 @@ header {
   padding: 45px 25px;
   background-color: #fff;
 
-  @media screen and (min-width: 480px) {
-    width: 320px;
-    padding: 50px 25px;
-  }
+  // @media screen and (min-width: 480px) {
+  //   width: 320px;
+  //   padding: 50px 25px;
+  // }
 
-  @media screen and (min-width: 768px) {
-    padding: 60px;
-    width: 530px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding: 60px;
-    width: 530px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   padding: 60px;
+  //   width: 530px;
+  // }
 }
 
-.modal--close {
+.modal-close {
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   position: absolute;
